fix: mobile view overflow fix, hidden scrollable content in glass instead

--- a/style.css
+++ b/style.css
@@ -29,19 +29,32 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.2);
   text-align: center;
   max-width: 90%;
+  max-height: 70%;
   color: silver;
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
+  overflow-y: scroll;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
-
-/*----------------------------------Home----------------------------------*/
+/* Hide scrollbar for Chrome, Safari and Opera */
+.glass-card::-webkit-scrollbar {
+  display: none;
+}
 
 .glass-card-content {
   padding: 40px;
 }
 
+.glass-card-content p {
+  font-size: 1rem;
+  opacity: 0.8;
+}
+
 .glass-card-header {
   padding: 20px 20px 0px;
 }
+
+/*----------------------------------Home----------------------------------*/
 
 .glass-card-header a {
   text-decoration: none;
@@ -75,17 +88,20 @@ body {
   margin: 0;
 }
 
-.title {
-  font-size: 1rem;
-  opacity: 0.8;
-}
-
 .personal-links{
   padding-top: 20px;
 }
 
 .personal-links a{
   margin: 0 10px;
+}
+
+/*----------------------------------Education----------------------------------*/
+#education p, h3{
+  text-align: left;
+}
+#education img{
+  float: right;
 }
 
 /*----------------------------------Navigation----------------------------------*/
